--- a/index.html
+++ b/index.html
@@ -6,6 +6,12 @@
     <title>Exploring Github</title>
 </head>
 <body>
-    <h2>My Github</h2>
+    <h2>My Github Report</h2>
+    <div>
+        <h1>For Every Other Time</h1>
+        <p>git add .</p>
+        <p>git commit -m "your meaningfull commit message"</p>
+        <p>git push</p>
+    </div>
 </body>
 </html>
